<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rounded_20"
    android:backgroundTint="@color/bg_dialog"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="24dp">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_horizontal"
            android:text="@string/delete_file_"
            android:textColor="@color/_111317"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/txtSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/delete_file_desc"
            android:textColor="@color/cc111317"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_bg_rounded_bottom_left_20"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/_007aff"
            android:textSize="18sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/divider" />

        <TextView
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_bg_rounded_bottom_right_20"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/delete"
            android:textColor="@color/_007aff"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>