<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_top_20"
        android:backgroundTint="@color/bg_default"
        android:orientation="vertical"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="64dp"
            android:layout_height="5dp"
            android:layout_gravity="center_horizontal"
            android:src="#33646464"
            app:shapeAppearanceOverlay="@style/ShapeAppearance50" />

        <LinearLayout
            android:id="@+id/llOpenWith"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/ripple_bg_transp_blackish"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="24dp"
            android:paddingVertical="12dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/ic_open_with" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/open_with"
                android:textColor="@color/_131412_dark"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llRestore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_bg_transp_blackish"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="24dp"
            android:paddingVertical="12dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/ic_restore" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/restore"
                android:textColor="@color/_131412_dark"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_bg_transp_blackish"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="24dp"
            android:paddingVertical="12dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/ic_share" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/share"
                android:textColor="@color/_131412_dark"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_bg_transp_blackish"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="24dp"
            android:paddingVertical="12dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/ic_delete" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/delete_permanent"
                android:textColor="@color/_131412_dark"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_bg_transp_blackish"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="24dp"
            android:paddingVertical="12dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/ic_details" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/details"
                android:textColor="@color/_131412_dark"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>