<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rounded_20"
    android:backgroundTint="@color/bg_dialog"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center_horizontal"
            android:paddingHorizontal="28dp"
            android:text="@string/dark"
            android:textColor="@color/_111317"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llFollowSystem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:orientation="horizontal"
                android:paddingVertical="12dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/chkFollowSystem"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="28dp"
                    app:srcCompat="@drawable/selector_language" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/system"
                    android:textColor="@color/_131412_dark"
                    android:textDirection="ltr"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:orientation="horizontal"
                android:paddingVertical="12dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/chkLight"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="28dp"
                    app:srcCompat="@drawable/selector_language" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/light"
                    android:textColor="@color/_131412_dark"
                    android:textDirection="ltr"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:orientation="horizontal"
                android:paddingVertical="12dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/chkDark"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="28dp"
                    app:srcCompat="@drawable/selector_language" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/dark"
                    android:textColor="@color/_131412_dark"
                    android:textDirection="ltr"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_bg_rounded_bottom_left_20"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/_007aff"
            android:textSize="18sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/divider" />

        <TextView
            android:id="@+id/btnDone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_bg_rounded_bottom_right_20"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/done"
            android:textColor="@color/_007aff"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>