<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_splash"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:src="@drawable/splash_icon"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/splashAnim"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/splash_anim" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:background="@drawable/bg_rounded_8"
        android:backgroundTint="@color/white_white"
        android:max="300"
        android:padding="2dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgLogo"
        app:layout_constraintVertical_bias="0.95"
        app:trackColor="@color/white_white"
        app:trackCornerRadius="8dp"
        app:trackThickness="12dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clGetStarted"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0">

        <ImageView
            android:id="@+id/imgGetStarted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/get_started_svg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4" />

        <TextView
            android:id="@+id/txtAppTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white_white"
            android:textSize="26sp"
            app:layout_constraintBottom_toTopOf="@id/txtAppSubTitle"
            app:layout_constraintTop_toBottomOf="@id/imgGetStarted"
            app:layout_constraintVertical_bias="0.15"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/txtAppSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/recover_deleted_files_for_free"
            android:textColor="@color/white_white"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/bottomLayout"
            app:layout_constraintTop_toBottomOf="@id/txtAppTitle"
            app:layout_constraintVertical_chainStyle="packed" />

        <LinearLayout
            android:id="@+id/bottomLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.95">

            <LinearLayout
                android:id="@+id/checkLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingVertical="12dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/policyCheck"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:gravity="center"
                    android:padding="4dp"
                    app:srcCompat="@drawable/selector_pp" />

                <TextView
                    android:id="@+id/txtPrivacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/policy_check_text"
                    android:textColor="#BFFFFFFF"
                    android:textSize="14sp" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_bg_white_rounded_20"
                android:backgroundTint="@color/white_white"
                android:elevation="2dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/agree_and_continue"
                android:textColor="@color/_007aff"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>